--- a/template/index.html
+++ b/template/index.html
@@ -12,23 +12,23 @@
   <title>Stocked IT</title>
 
   <!-- Bootstrap core CSS -->
-  <!-- <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
-  <link href="{{url_for( 'vendor',filename='bootstrap/css/bootstrap.min.css' )}}" rel="stylesheet">
+  <link href="..\static\vendor\bootstrap\css\bootstrap.min.css" rel="stylesheet">
+  <!-- <link href="{{url_for( 'vendor',filename='static\vendor\bootstrap\css\bootstrap.min.css' )}}" rel="stylesheet"> -->
 
-  {{url_for( 'static',filename='css/fontawesome.css' )}}
+  <!-- {{url_for( 'static',filename='css/fontawesome.css' )}} -->
   <!-- Additional CSS Files -->
-  <!-- <link rel="stylesheet" href="assets/css/fontawesome.css">
-  <link rel="stylesheet" href="assets/css/templatemo-grad-school.css">
-  <link rel="stylesheet" href="assets/css/owl.css">
-  <link rel="stylesheet" href="assets/css/lightbox.css">
-  <link rel="stylesheet" href="assets/css/styles.css"> -->
+  <link rel="stylesheet" href="../static/css/fontawesome.css">
+  <link rel="stylesheet" href="../static/css/templatemo-grad-school.css">
+  <link rel="stylesheet" href="../static/css/owl.css">
+  <link rel="stylesheet" href="../static/css/lightbox.css">
+  <link rel="stylesheet" href="../static/css/styles.css">
 
 
-  <link rel="stylesheet" href="{{url_for( 'static',filename='css/fontawesome.css' )}}" type="text/css">
+  <!-- <link rel="stylesheet" href="{{url_for( 'static',filename='css/fontawesome.css' )}}" type="text/css">
   <link rel="stylesheet" href="{{url_for( 'static',filename='css/templatemo-grad-school.css' )}}" type="text/css">
   <link rel="stylesheet" href="{{url_for( 'static',filename='css/owl.css' )}}" type="text/css">
   <link rel="stylesheet" href="{{url_for( 'static',filename='css/lightbox.css' )}}" type="text/css">
-  <link rel="stylesheet" href="{{url_for( 'static',filename='css/styles.css' )}}" type="text/css">
+  <link rel="stylesheet" href="{{url_for( 'static',filename='css/styles.css' )}}" type="text/css"> -->
 
 </head>
 
@@ -59,7 +59,7 @@
 
     
     <video autoplay muted loop id="bg-video">
-      <source src="assets/images/video.mp4" type="video/mp4" />
+      <source src="../static/images/video.mp4" type="video/mp4" />
     </video>
 
           
@@ -191,7 +191,7 @@
         </div>
         </div>
         <div class="col-md-6">
-            <img src="assets/images/allweather.png" alt=""><a rel="nofollow"></a>
+            <img src="../static/images/allweather.png" alt=""><a rel="nofollow"></a>
           </div>
       </div>
     </div>
@@ -215,7 +215,7 @@
         
       </div>
       <div class="col-md-6">
-        <img src="assets/images/Safeplay.png" alt=""><a rel="nofollow"></a>
+        <img src="../static/images/Safeplay.png" alt=""><a rel="nofollow"></a>
       </div>
     </div>
     </div>
@@ -239,7 +239,7 @@
           </div>
         </div>
         <div class="col-md-6">
-          <img src="assets/images/Buyright.png" alt=""><a rel="nofollow"></a>
+          <img src="../static/images/Buyright.png" alt=""><a rel="nofollow"></a>
         </div>
       </div>
     </div>
@@ -267,7 +267,7 @@
               <article id='tabs-1'>
                 <div class="row">
                   <div class="col-md-6">
-                    <img src="assets/images/whoweare_re.jpg" alt="">
+                    <img src="../static/images/whoweare_re.jpg" alt="">
                   </div>
                   <div class="col-md-6">
                     <h4>Who we are?</h4>
@@ -278,7 +278,7 @@
               <article id='tabs-2'>
                 <div class="row">
                   <div class="col-md-6">
-                    <img src="assets/images/whatwedo_re.jpg" alt="">
+                    <img src="../static/images/whatwedo_re.jpg" alt="">
                   </div>
                   <div class="col-md-6">
                     <h4>What we do?</h4>
@@ -289,7 +289,7 @@
               <article id='tabs-3'>
                 <div class="row">
                   <div class="col-md-6">
-                    <img src="assets/images/howitworks_re.jpg" alt="">
+                    <img src="../static/images/howitworks_re.jpg" alt="">
                   </div>
                   <div class="col-md-6">
                     <h4>How it works?</h4>
@@ -333,13 +333,13 @@
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-  <script src="assets/js/isotope.min.js"></script>
-  <script src="assets/js/owl-carousel.js"></script>
-  <script src="assets/js/lightbox.js"></script>
-  <script src="assets/js/tabs.js"></script>
-  <script src="assets/js/video.js"></script>
-  <script src="assets/js/slick-slider.js"></script>
-  <script src="assets/js/custom.js"></script>
+  <script src="../static/js/isotope.min.js"></script>
+  <script src="../static/js/owl-carousel.js"></script>
+  <script src="../static/js/lightbox.js"></script>
+  <script src="../static/js/tabs.js"></script>
+  <script src="../static/js/video.js"></script>
+  <script src="../static/js/slick-slider.js"></script>
+  <script src="../static/js/custom.js"></script>
   <script>
     //according to loftblog tut
     $('.nav li:first').addClass('active');
